syntax = "proto3";

package org.kt.protobuf.generated;
option java_multiple_files = true;

message NumberRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumberResponse {
  int32 number = 1;
}

service NumberService {
  rpc generateNumbers(NumberRequest) returns (stream NumberResponse);
}
